--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -27,6 +27,12 @@
         <%= form.text_field :employee_id_card, class: "form-control" %>
       </p>
     </div>
+    <div class="d-none">
+      <p>
+        <%= form.label "Tipo de empleado", style: "display: block" %>
+        <%= form.text_field :employee_type, class: "form-control" %>
+      </p>
+    </div>
     <div>
       <p>
         <%= form.label "Estado del empleado", style: "display: block" %>
@@ -41,10 +47,6 @@
           <%= form.radio_button :employee_status, "Inactivo", class: "form-check-input", type: "radio", :checked => true %>
         </div>
       </div>
-    </div>
-    <div class="d-none">
-      <%= form.label :user_id, style: "display: block" %>
-      <%= form.number_field :user_id %>
     </div>
     <div>
       <%= form.submit "Añadir nuevo empleado", class: "btn btn-primary" %>
