--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -13,6 +13,10 @@
   <div class="row">
     <div class="container p-3">
       <p>
+        <strong>Sede:</strong>
+        <%= request.campus.name %>
+      </p>
+      <p>
         <strong>Dirección email del solicitante:</strong>
         <%= request.requester_mail %>
       </p>
