Se agrega Action Mailer, y se generan los correos a enviar.

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -44,7 +44,7 @@
     <div>
       <p>
         <%= form.label "Dirección de correo electrónico", style: "display: block" %>
-        <%= form.text_field :requester_mail, class: "form-control" %>
+        <%= form.email_field :requester_mail, class: "form-control" %>
       </p>
     </div>
     <div data-controller="select" data-select-hidden-class="hidden">
