--- a/app/views/requests/admin_views/_admin_request_actions.html.erb
+++ b/app/views/requests/admin_views/_admin_request_actions.html.erb
@@ -1,10 +1,10 @@
 <% case request.status
    when "pending" %>
-<%= link_to change_status_request_path(request), class: "btn btn-sm btn-primary" do %>
+<%= link_to change_status_request_path(request), class: "btn btn-sm btn-primary", :data => {:confirm => '¿Está seguro? Esta acción es irreversible'} do %>
   <i class="bi bi-pencil-square"></i>
   Atender
 <% end %>
-<%= link_to edit_request_path(request), class: "btn btn-sm btn-primary" do %>
+<%= link_to edit_request_path(request), class: "btn btn-sm btn-primary", :data => {:confirm => '¿Está seguro? Esta acción es irreversible'} do %>
   <i class="bi bi-x-square"></i>
   Rechazar
 <% end %>
