Se agrega identificador distinto a la llave primaria de las solicitudes

--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -6,12 +6,16 @@
       <% when "completed" %> Solicitud Finalizada
       <% when "closed" %> Solicitud Cerrada
       <% when "denied" %> Solicitud Rechazada
-      <% else %> Solicitud Pendiente
+      <% else %> Solicitud Pendiente de Revisión
       <% end %>
     </h3>
   </div>
   <div class="row">
     <div class="container p-3">
+      <p>
+        <strong>Solicitud:</strong>
+        <%= @request.identifier %>
+      </p>
       <p>
         <strong>Sede:</strong>
         <%= request.campus.name %>
