--- a/app/views/requests/ask_state.html.erb
+++ b/app/views/requests/ask_state.html.erb
@@ -6,7 +6,7 @@
         <div class="row">
           <p>
             <%= form.label "Ingrese el número de la solicitud", style: "display: block" %>
-            <%= form.number_field :request_number, class:"form-control" %>
+            <%= form.text_field :identifier, class:"form-control" %>
           </p>
         </div>
         <div class ="row">
