Se hacen cambios en el envío de correos

--- a/app/views/request_mailer/request_accepted.html.erb
+++ b/app/views/request_mailer/request_accepted.html.erb
@@ -1,3 +1,8 @@
-Solicitud aceptada
+<h1>Solicitud aceptada</h1>
+
+<p>
   Este correo fue generado por el Sistema de Servicios Generales para indicar que su solicud fue aceptada.
+</p>
+<p>
   Para observar el desarrollo de la solicitud, ingrese al siguiente enlace: <%=request_url(@request) %>
+</p>
