--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,12 +12,22 @@
   </head>
 
   <body>
-   <div class="flex-wrapper bg-image" style="background-image: url(<%= asset_path('bg-image.jpg') %>);">  <!-- style="background-image: url(<%= asset_path('bg-image.jpg') %>);" -->
-      <%= render "shared/navbar" %>
-      <!--<%= render "layouts/navigation" %>-->
-      <%= render "layouts/devise_notifications" %>
-      <%= yield %>
-      <%= render "shared/footer" %>
-   </div>
+    <% if !current_user_account %>
+      <div class="flex-wrapper bg-image" style="background-image: url(<%= asset_path('bg-image.jpg') %>);">
+        <%= render "shared/navbar" %>
+        <!--<%= render "layouts/navigation" %>-->
+        <%= render "layouts/devise_notifications" %>
+        <%= yield %>
+        <%= render "shared/footer" %>
+      </div>
+    <% else %>
+      <div class="flex-wrapper bg-image">
+        <%= render "shared/navbar" %>
+        <!--<%= render "layouts/navigation" %>-->
+        <%= render "layouts/devise_notifications" %>
+        <%= yield %>
+        <%= render "shared/footer" %>
+      </div>
+    <% end %>
   </body>
 </html>
