--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="bottom-shadow-sm">
     <div class="header">
         <div class="container">
             <div class="header-content">
