--- a/app/views/user_accounts/shared/_links.html.erb
+++ b/app/views/user_accounts/shared/_links.html.erb
@@ -2,9 +2,9 @@
   <%= link_to "Iniciar sesión", new_session_path(resource_name) %><br />
 <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+<!-- <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <%= link_to "Registrarse", new_registration_path(resource_name) %><br />
-<% end %>
+<% end %> -->
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
   <%= link_to "¿Olvidó la contraseña?", new_password_path(resource_name) %><br />
