--- a/app/views/requests/ask_state.html.erb
+++ b/app/views/requests/ask_state.html.erb
@@ -1,28 +1,22 @@
-<div class="container mt-3 pt-5 pb-5 ps-5 pe-5 border border-2 rounded-3">
-  <%= form_with(scope: :session, url: ask_state_path, local: true) do |form| %>
+<main class="main">
+  <div class="container main-form form-pad-lg bg-mandala">
+    <h1 class="mb-5">Consultar estado de solicitud</h1>
 
-      <div id="requester_information" class="form-group">
-        <h2 class="text-center">Ver estado de solicitud</h2>
-        <div class="row">
-          <p>
-            <%= form.label "Ingrese el número de la solicitud", style: "display: block" %>
-            <%= form.number_field :request_number, class:"form-control" %>
-          </p>
-        </div>
-        <div class ="row">
-          <p>
-            <%= form.label "Ingrese la dirección de correo electrónico", style: "display: block" %>
-            <%= form.text_field :requester_email, class:"form-control" %>
-          </p>
-        </div>
+    <%= form_with(scope: :session, url: ask_state_path, local: true) do |form| %>
+      <div class="input input-50">
+        <%= form.label "Ingrese el número de la solicitud", style: "display: block" %>
+        <%= form.number_field :request_number, placeholder: "Número de solicitud" %>
       </div>
-      <div class="row">
-        <div class="col-2">
-          <%= link_to "Cancelar", root_path, class:"btn btn-primary" %>
-        </div>
-        <div class="col-2">
-          <%= form.submit "Ver estado", class:"btn btn-primary" %>
-        </div>
+
+      <div class="input input-50">
+        <%= form.label "Correo electrónico" %>
+        <%= form.text_field :email, placeholder: "Correo" %>
       </div>
-  <% end %>
-</div>
+
+      <div class="button-group form-buttons">
+        <%= form.submit "Consultar", class: "btn-default btn-submit" %>
+        <%= link_to "Regresar", root_path, class: "btn-default btn-back" %>
+      </div>
+    <% end %>
+  </div>
+</main>
