Se hacen cambios en el javascript en la selección de localización de la solicitud

--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -80,7 +80,7 @@
         </p>
         <p>
           <%= form.label "Locación", style: "display: block" %>
-          <%= form.select :work_location, "", {}, class: "form-select" %>
+          <%= form.select :work_location_id, "", {}, class: "form-select" %>
         </p>
       </div>
     </div>
